fixed bug #3